added contact us form

--- a/index.html
+++ b/index.html
@@ -1418,32 +1418,12 @@ Bank Transfer and other options available on request." style="float:right;"><img
             <div class="row">
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <div class="col-md-8 col-sm-8 scrollpoint sp-effect1">
-
-                            <div id="wufoo-m1uhkpbm0dwbzoo">
-                                Fill out my <a href="https://contactlord.wufoo.com/forms/m1uhkpbm0dwbzoo">online
-                                form</a>.
-                            </div>
-                            <script type="text/javascript">var m1uhkpbm0dwbzoo;(function(d, t) {
-                            var s = d.createElement(t), options = {
-                            'userName':'contactlord',
-                            'formHash':'m1uhkpbm0dwbzoo',
-                            'autoResize':true,
-                            'height':'495',
-                            'async':true,
-                            'host':'wufoo.com',
-                            'header':'show',
-                            'ssl':true};
-                            s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-                            s.onload = s.onreadystatechange = function() {
-                            var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-                            try { m1uhkpbm0dwbzoo = new WufooForm();m1uhkpbm0dwbzoo.initialize(options);m1uhkpbm0dwbzoo.display(); } catch (e) {}};
-                            var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-                            })(document, 'script');
-
-                            </script>
+                        <div class="col-md-8 col-sm-8 scrollpoint sp-effect1">              
+			  <div id="wufoo-mel9ver1wwcpvr"> Fill out my <a href="https://rajkale99.wufoo.com/forms/mel9ver1wwcpvr">online form</a>.
+			</div>
+			<script type="text/javascript"> var mel9ver1wwcpvr; (function(d, t) { var s = d.createElement(t), options = { 'userName':'rajkale99', 'formHash':'mel9ver1wwcpvr', 'autoResize':true, 'height':'496', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true }; s.src = ('https:' == d.location.protocol ?'https://':'http://') + 'secure.wufoo.com/scripts/embed/form.js'; s.onload = s.onreadystatechange = function() { var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return; try { mel9ver1wwcpvr = new WufooForm(); mel9ver1wwcpvr.initialize(options); mel9ver1wwcpvr.display(); } catch (e) { } }; var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr); })(document, 'script');
+			</script>      
                         </div>
-
                     </div>
                 </div>
             </div>
