--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8"><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
-    <title>Applytics | Buy App Reviews From Real Users Starting $1</title>
+    <title>MySocialCare</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
@@ -60,7 +60,7 @@
 <!--      <script type="text/javascript" src="static/js/mdb.min.js"></script>-->
 
 
-    <script>
+    <!--script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -68,7 +68,7 @@
 
      ga('create', 'UA-88376562-2', 'auto');
       ga('send', 'pageview');
-    </script>
+    </script>-->
 
 
     <!-- Start of HubSpot Embed Code -->
@@ -177,7 +177,7 @@ s0.parentNode.insertBefore(s1,s0);
                     </div>
 
                     <div class="tp-caption large_white_bold sft" data-x="550" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1200" data-easing="Power4.easeOut">
-                        Applytics
+                        MySocialCare
                     </div>
                     <div class="tp-caption large_white_light sfr" data-x="770" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1400" data-easing="Power4.easeOut">
 
@@ -367,12 +367,12 @@ s0.parentNode.insertBefore(s1,s0);
                     <div id="gif-loader">
                     <img src="images/loading.gif" alt="logo-pic">
                         </div>
-                   <!--<img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">-->
+                   <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">
                 </div>
 
                 <div class="text-center mt-1-half">
 
-                    <!--<a id="instamojo" href="#" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>-->
+                    <a id="instamojo" href="#" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
 
                     <a id="instamojo" href="#" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
 
