Rebrand to SocialCare

--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@ s0.parentNode.insertBefore(s1,s0);
 
                 <div class="text-center mt-1-half">
 
-                    <a id="instamojo" href="#" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
+                    <a id="instamojo" href="paypal.me/rajkale99" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
 
-                    <a id="instamojo" href="#" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
+                    <a id="instamojo" href="paypal.me/rajkale99" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
 
                 </div>
 
@@ -448,7 +448,7 @@ s0.parentNode.insertBefore(s1,s0);
                         <div class="infobutton">
 
                            <button type="button" class=" pop-data" data-toggle="popover" data-placement="left"  data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request.">p</button>
                         </div>
 -->
@@ -483,7 +483,7 @@ Bank Transfer and other options available on request.">p</button>
                                 <button type="button" onclick="androidBase()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="android-base">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -503,7 +503,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
 
 <!--
                             <div title="Delivery time: 48 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." class="infobtngrowth"><font size="4"
                                                                                    color="black"><b><i>i</i></b></font>
                             </div>
@@ -537,7 +537,7 @@ Bank Transfer and other options available on request." class="infobtngrowth"><fo
                                  <button type="button" onclick="androidGrowth()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -548,7 +548,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                     <div class="col-sm-4 scrollpoint sp-effect2">
 <!--
                         <div title="Delivery time: 72 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." class="infobutton"><font size="4"
                                                                                 color="black"><b><i>i</i></b></font>
                         </div>
@@ -584,7 +584,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
 
 
                        <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -631,7 +631,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                 <button type="button" onclick="iosBase()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -675,7 +675,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                  <button type="button" onclick="iosGrowth()" class="btn btn-info btn-lg " data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -717,7 +717,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                 <button type="button" onclick="iosMaxima()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: randy@applytics.co for any support
+Email: kaleraj.rk@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -1435,7 +1435,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
     <div class="container">
 
         <div class="rights">
-            <p>Email: randy@applytics.co</p>
+            <p>Email: kaleraj.rk@gmail.com</p>
             <p>Skype: live:randy_5362</p>
             <p>Phone: +1-213-457-3451</p>
 
@@ -1446,7 +1446,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
         </a>
 
         <div class="rights">
-            <p>Copyright <a href="/blog" style="text-decoration: none;">&copy; </a> Applytics</p>
+            <p>Copyright <a href="/blog" style="text-decoration: none;">&copy; </a> MySocialCare</p>
         </div>
     </div>
 </footer>
