--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--<![endif]-->
 
 
-<!-- Mirrored from applytics.co/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 22 May 2017 07:13:49 GMT -->
+<!-- Mirrored from mysocialcare.co/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 22 May 2017 07:13:49 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8"><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
-    <meta name="description" content="Backed by the largest user community mobile users,  Applytics provide millions of mobile app reviews to thousands of apps. Buy mobile app reviews at best prices now!">
+    <meta name="description" content="Backed by the largest user community mobile users,  MySocialCare provide millions of mobile app reviews to thousands of apps. Buy mobile app reviews at best prices now!">
     <meta name="keywords" content="Buy Android Reviews, Buy App Reviews, Buy Mobile App Reviews, Buy Android App Reviews, Buy iOS Reviews, Buy iOS app reviews, Buy Android Installs, Buy App Installs, Buy Mobile App Installs, Buy Android app installs, Buy iOS installs, Buy iOS app installs">
 
     <link rel="shortcut icon" href="favicon.ico">
@@ -1043,7 +1043,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                 <div class="about-item scrollpoint sp-effect2">
                     <i class="fa fa-download fa-2x"></i>
                     <h3>Easy setup</h3>
-                    <p>At Applytics, we believe in smooth processes. That's why we create hassel-free campaign
+                    <p>At MySocialCare, we believe in smooth processes. That's why we create hassel-free campaign
                         setups whenever you buy installs or reviews.</p>
                 </div>
             </div>
