--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 <div class="pre-loader">
     <div class="load-con">
-        <img src="images/logo.png" class="animated fadeInDown" alt="">
+        <img src="favicon.ico" class="animated fadeInDown" alt="">
         <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
@@ -1442,7 +1442,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
         </div>
         <a class="scrollpoint sp-effect3" style="margin-top: 40px;">
             <!--<img src="assets/img/freeze/logo.png" alt="" class="logo">-->
-            <img src="images/logo.png" alt="" class="logo">
+            <img src="favicon.ico" alt="" class="logo">
         </a>
 
         <div class="rights">
