--- a/index.html
+++ b/index.html
@@ -364,20 +364,14 @@ s0.parentNode.insertBefore(s1,s0);
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
                       <!---->
-                    <div id="gif-loader">
-                    <img src="images/loading.gif" alt="logo-pic">
-                        </div>
                    <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">
                 </div>
 
                 <div class="text-center mt-1-half">
 
-                    <a id="instamojo" href="paypal.me/rajkale99" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
-
-                    <a id="instamojo" href="paypal.me/rajkale99" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
+                    <a id="instamojo" href="https://paypal.me/thckrdp02" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
 
                 </div>
-
 
             </div>
         </div>
