--- a/index.html
+++ b/index.html
@@ -369,8 +369,7 @@ s0.parentNode.insertBefore(s1,s0);
 
                 <div class="text-center mt-1-half">
 
-                    <a id="instamojo" href="https://paypal.me/thckrdp02" target="_blank"><input width="224" height="44" type="image" src="images/pay-now-instamojo.png"></a>
-
+                     <a id="instamojo" href="https;//www.papal.me/thckrdp02 rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
                 </div>
 
             </div>
@@ -442,7 +441,7 @@ s0.parentNode.insertBefore(s1,s0);
                         <div class="infobutton">
 
                            <button type="button" class=" pop-data" data-toggle="popover" data-placement="left"  data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrdp.p02@gmail.com for any support
 Bank Transfer and other options available on request.">p</button>
                         </div>
 -->
@@ -477,7 +476,7 @@ Bank Transfer and other options available on request.">p</button>
                                 <button type="button" onclick="androidBase()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="android-base">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -497,7 +496,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
 
 <!--
                             <div title="Delivery time: 48 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." class="infobtngrowth"><font size="4"
                                                                                    color="black"><b><i>i</i></b></font>
                             </div>
@@ -531,7 +530,7 @@ Bank Transfer and other options available on request." class="infobtngrowth"><fo
                                  <button type="button" onclick="androidGrowth()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -542,7 +541,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                     <div class="col-sm-4 scrollpoint sp-effect2">
 <!--
                         <div title="Delivery time: 72 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." class="infobutton"><font size="4"
                                                                                 color="black"><b><i>i</i></b></font>
                         </div>
@@ -578,7 +577,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
 
 
                        <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -625,7 +624,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                 <button type="button" onclick="iosBase()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -669,7 +668,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                  <button type="button" onclick="iosGrowth()" class="btn btn-info btn-lg " data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -711,7 +710,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                                 <button type="button" onclick="iosMaxima()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
-Email: kaleraj.rk@gmail.com for any support
+Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
 
 
@@ -1429,9 +1428,9 @@ Bank Transfer and other options available on request." style="float:right;"><img
     <div class="container">
 
         <div class="rights">
-            <p>Email: kaleraj.rk@gmail.com</p>
-            <p>Skype: live:randy_5362</p>
-            <p>Phone: +1-213-457-3451</p>
+            <p>Email: kthckrd.p02@gmail.com</p>
+            <p>Skype: live;tackrd.p01</p>
+            <p>Phone: +91 9016368141</p>
 
         </div>
         <a class="scrollpoint sp-effect3" style="margin-top: 40px;">
