--- a/index.html
+++ b/index.html
@@ -1028,39 +1028,37 @@ Bank Transfer and other options available on request." style="float:right;"><img
         <div class="section-heading scrollpoint sp-effect3">
             <h1>About Us</h1>
             <div class="divider"></div>
-            <p>We help your app polished through 5 star ratings!</p>
+            <p>We helps you to increases your app rank in play store.</p>
         </div>
 
         <div class="row set-row">
             <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="about-item scrollpoint sp-effect2">
                     <i class="fa fa-download fa-2x"></i>
-                    <h3>Easy setup</h3>
-                    <p>At MySocialCare, we believe in smooth processes. That's why we create hassel-free campaign
-                        setups whenever you buy installs or reviews.</p>
+                    <h3>Smooth setup</h3>
+                    <p>At my social care provides you smooth service , which will tension free campaign and good results.
+</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="about-item scrollpoint sp-effect5">
                     <i class="fa fa-mobile fa-2x"></i>
-                    <h3>On-the-go</h3>
-                    <p>With our On the Go reporting systems, you'll have access to your campaign reports 24*7</p>
+                    <h3>Anytime go</h3>
+                    <p> with our anytime go reporting system ,  you can contact us 24/7</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="about-item scrollpoint sp-effect5">
                     <i class="fa fa-users fa-2x"></i>
-                    <h3>Epic Userbase</h3>
-                    <p>In the last few years, we have outgrown every other company. We have more than 2Million+
-                        Users</p>
+                    <h3>Quality Userbase</h3>
+                    <p>my social care growing more compare to other companies because of its Quality thousands of users.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-6">
                 <div class="about-item scrollpoint sp-effect1">
                     <i class="fa fa-sliders fa-2x"></i>
-                    <h3>Dedicated support</h3>
-                    <p>Once the camapign is started, you get your personal manager looking to help you with
-                        campaigns</p>
+                    <h3>Support</h3>
+                    <p>once the campaign is started , you will get personal manager for your app.</p>
                 </div>
             </div>
         </div>
