--- a/index.html
+++ b/index.html
@@ -363,13 +363,12 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
-                      <!---->
                    <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">
                 </div>
 
                 <div class="text-center mt-1-half">
 
-                     <a id="instamojo" href="https;//www.papal.me/thckrdp02 rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
+                     <a id="instamojo" href="https;//www.papal.me/thckrdp02" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
                 </div>
 
             </div>
