--- a/index.html
+++ b/index.html
@@ -363,12 +363,9 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
+			<a href="https://wwwpaypal.me/thckrdp02">
                    <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">
-                </div>
-
-                <div class="text-center mt-1-half">
-
-                     <a id="instamojo" href="https;//www.papal.me/thckrdp02" rel="im-checkout" data-behaviour="remote" data-style="flat" data-text="Checkout With Instamojo" target="_blank"></a>
+			</a>
                 </div>
 
             </div>
@@ -1184,14 +1181,14 @@ Bank Transfer and other options available on request." style="float:right;"><img
                         <div class="row">
                             <div class="col-md-2">
                                 <div class="review-person">
-                                    <img src="images/person3.jpg" alt="" class="img-responsive img-down">
+                                    <img src="images/person1.jpg" alt="" class="img-responsive img-down">
                                 </div>
                             </div>
                             <div class="col-md-10">
                                 <div class="review-comment">
-                                    <h3>“This ASO Company has been a fantastic asset to our App Marketing. Over a few years of poorly managed ASO, they were able to come on-board and turn our App ranking around. Great reporting processes, and contact from our campaign manager. We will continue to use their services and buy android reviews for years to come!”</h3>
+                                    <h3>"Once I tried this service , but after I feel the effect towards my app ,  I used it for daily basis , our ranking was so down,  I was thinking what to do and that time I came to know about my social care ,  they helps me to achieve what I wanted.  Big thumbs up :+1: for my social care."</h3>
                                     <p>
-                                        - Adam Butler
+                                        - Stephen Robert
                                         <span>
                                                     <i class="fa fa-star fa-lg"></i>
                                                     <i class="fa fa-star fa-lg"></i>
@@ -1213,9 +1210,9 @@ Bank Transfer and other options available on request." style="float:right;"><img
                             </div>
                             <div class="col-md-10">
                                 <div class="review-comment">
-                                    <h3>"Our traffic has increased by 64% since they’ve worked on our app and they got multiple keywords we were ranking poorly for up to the Top 5 Results. In fact, our keywords have improved by an average of 56 positions during our time with this company. I highly recommend their ASO and Review Service as they have made a great difference to our business. Recommend these guys for ASO and as a one stop solution to buy ios reviews."</h3>
+                                    <h3>"Our company was getting very poor reviews ,  I was marketing in charge in company,  there was pressure on me about app marketing ,  my social care has solved my problem ,  now we will buy reviews year together from here only"</h3>
                                     <p>
-                                        - Patricia Brown
+                                        - Sophia
                                         <span>
                                                     <i class="fa fa-star fa-lg"></i>
                                                     <i class="fa fa-star fa-lg"></i>
