--- a/index.html
+++ b/index.html
@@ -49,54 +49,6 @@
     <link rel="stylesheet" href="css/mdb.min.css">
     <link rel="stylesheet" href="css/styles.min.css">
 
-    <!--<link rel="stylesheet" href="/static/css/styles.css">-->
-    <!--<link rel="stylesheet" href="/static/css/main.css">-->
-    <!--  <link href="static/css/enhanced-modals.css" rel="stylesheet"> -->
-<!--     <link rel="stylesheet" type="text/css" href="static/css/mdb.min.css">-->
-
-
-    <!--<script type="text/javascript" src="/static/js/modernizr.custom.32033.js"></script>-->
-     <!--  <script src="static/js/enhanced-modals.js"> </script> -->
-<!--      <script type="text/javascript" src="static/js/mdb.min.js"></script>-->
-
-
-    <!--script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-     ga('create', 'UA-88376562-2', 'auto');
-      ga('send', 'pageview');
-    </script>-->
-
-
-    <!-- Start of HubSpot Embed Code -->
-  <script type="text/javascript" id="hs-script-loader" async defer src="js/3791614.js"></script>
-<!-- End of HubSpot Embed Code -->
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/585ebfe97418a41587c2bba4/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-
-
-    </script>
-    <!--End of Tawk.to Script-->
-
-
 </head>
 
 <body>
@@ -363,7 +315,7 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
 
                 <div class="text-center mt-1-half" id="render-paypal-button">
-			<a href="https://wwwpaypal.me/thckrdp02">
+			<a href="https://www.paypal.me/thckrdp02">
                    <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/silver-rect-paypalcheckout-44px.png" alt="PayPal Checkout" class="confirm-page-btn-submit">
 			</a>
                 </div>
