--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@ Bank Transfer and other options available on request.">p</button>
                             <li class="plan-action">
 
 
-                                <button type="button" onclick="androidBase()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="android-base">BUY</button>
+                                <button type="button" onclick="https://form.jotform.me/90955879730473" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="android-base">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
@@ -475,7 +475,7 @@ Bank Transfer and other options available on request." class="infobtngrowth"><fo
 
                             <li class="plan-action">
 
-                                 <button type="button" onclick="androidGrowth()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
+                                 <button type="button" onclick="https://form.jotform.me/90956960419469" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
@@ -521,7 +521,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
                             <li class="plan-action">
 
 
-                                 <button type="button" onclick="androidMaxima()" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
+                                 <button type="button" onclick="https://form.jotform.me/90956914058467" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
 
 
                        <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
@@ -1068,7 +1068,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                         Control the amount of reviews posted in a month or in a day
                     </div>
                 </div>
-
+-->
             </div>
             <div class="col-md-4 col-sm-4 hidden-xs">
                 <img src="images/iphone-freeze.png" class="img-responsive scrollpoint sp-effect5" alt="">
@@ -1112,7 +1112,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                         it for you too!
                     </div>
                 </div>
--->
+
             </div>
         </div>
     </div>
@@ -1182,7 +1182,7 @@ Bank Transfer and other options available on request." style="float:right;"><img
                             <div class="col-md-2">
                                 <div class="review-person">
                                     <!--<img src="assets/img/freeze/Debnath.jpg" alt="" class="img-responsive">-->
-                                    <img src="images/person3.jpg" alt="" class="img-responsive">
+                                    <img src="images/person1.jpg" alt="" class="img-responsive">
 
                                 </div>
                             </div>
