--- a/index.html
+++ b/index.html
@@ -228,16 +228,6 @@
                     <li id="planandroid" class="active" style="padding:auto 50px auto 50px">
                         <a data-target="#1a" data-toggle="tab">Android</a>
                     </li>
-			<!-->
-                    <li id="planios">
-                        <a data-target="#2a" data-toggle="tab">iOS</a>
-                    </li>
-                    <li id="planinstalls">
-                        <a data-target="#3a" data-toggle="tab">Android-Installs</a>
-                    </li>
-                    <li id="planinstalls1">
-                        <a data-target="#4a" data-toggle="tab">iOS-Installs</a>
-                    </li>-->
 
                 </ul>
 
@@ -289,9 +279,7 @@ Bank Transfer and other options available on request.">p</button>
 
                             <li class="plan-action">
 
-
-                                <button type="button" onclick="https://form.jotform.me/90955879730473" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" id="android-base">BUY</button>
-
+				    <a href="https://form.jotform.me/90955879730473" class="btn" btn-default">Buy</a>
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
@@ -344,8 +332,7 @@ Bank Transfer and other options available on request." class="infobtngrowth"><fo
 
                             <li class="plan-action">
 
-                                 <button type="button" onclick="https://form.jotform.me/90956960419469" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
-
+<a href="https://form.jotform.me/90956960419469" class="btn" btn-default">Buy</a>
                                 <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
 Bank Transfer and other options available on request." style="float:right;"><img src="fonts/info.svg" alt="info icon" width="20px" height="20px" style="float:right;"></a>
@@ -390,8 +377,7 @@ Bank Transfer and other options available on request." class="infobutton"><font 
                             <li class="plan-action">
 
 
-                                 <button type="button" onclick="https://form.jotform.me/90956914058467" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">BUY</button>
-
+<a href="https://form.jotform.me/90956914058467" class="btn" btn-default">Buy</a>
 
                        <a type="button" class="pop-data" data-toggle="popover" data-content="Delivery time: 24 Hours
 Email: thckrd.p02@gmail.com for any support
